Updated hero banners, updated Team Member border colors and bio length. Removed Team Member loading delay. Updated home page logo. Turned the “wpautop” content filter back on because it was preventing the text from being wrapped in paragraph tags.

--- a/wp-content/themes/zerif-lite/style.css
+++ b/wp-content/themes/zerif-lite/style.css
@@ -1005,7 +1005,7 @@ a:active {
 }
 
 #hero {
-	/*height: 270px;*/
+	height: 175px;
 	overflow: hidden;
 	position: relative;
 	display: inline-block;
@@ -1022,8 +1022,7 @@ a:active {
 	color: #fff;
 	text-transform: uppercase;
 	vertical-align: middle;
-	/*line-height: 270px;*/
-	margin-top: 12%;
+	margin-top: 65px;
 }
 
 .hero-content {
@@ -1468,7 +1467,7 @@ object {
 	-webkit-box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
 	box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
 	/*padding: 285px 0 210px;*/
-	padding: 120px 0 10px;
+	padding: 130px 0 50px;
 }
 .blog-header-content-wrap {
 	background-color: rgba(0, 0, 0, 0.5);
@@ -2608,7 +2607,12 @@ width: -webkit-calc(100% / 4);
 	/*top: -200px;*/
 	/*left: 0;*/
 	width: 100%;
-	height: 190px;
+	min-height: 190px;
+
+	/* If you want each member info to be a fixed height with a scrollbar, uncomment these two lines */
+	/*max-height: 400px;
+	overflow: scroll;*/
+
 	/*-webkit-transition: all 500ms;
 	transition: all 500ms;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -2684,17 +2688,18 @@ width: -webkit-calc(100% / 4);
 .team-member .social-icons ul li a:hover {
 	color: #615b79;
 }
+
 .our-team .row > span:nth-child(4n+1) .red-border-bottom:before{
-    background: #615b79;
+    background: #e8d8f0;
 }
 .our-team .row > span:nth-child(4n+2) .red-border-bottom:before{
-    background: #34d293;
+    background: #d6f3bf;
 }
 .our-team .row > span:nth-child(4n+3) .red-border-bottom:before{
-    background: #3ab0e2;
+    background: #bee4f5;
 }
 .our-team .row > span:nth-child(4n+4) .red-border-bottom:before{
-    background: #f7d861;
+    background: #f9d9a5;
 }
 
 /*---------------------------------------
